[package]
name = "djson"
version = "0.1.0"
authors = ["Edwin Svensson <djson@olback.net>"]
edition = "2018"
description = "Easily Access Dynamic JSON in Rust"
license = "MIT / Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
